tests/positive/MiniC/Lib/Data/Int.juvix
module Data.Int;

open import Data.String;

axiom Int : Type;
compile Int {
  c ↦ "int";
};

axiom intToStr : Int → String;

compile intToStr {
  c ↦ "intToStr";
};

foreign c {
   int plus(int l, int r) {
     return l + r;
   \}
};

infixl 6 +;
axiom + : Int -> Int -> Int;
compile + {
  c ↦ "plus";
};

end;
