tests/negative/MicroJuvix/NoPositivity/E1.juvix
module E1;

axiom B : Type;
inductive X  {
  c : (X -> B) -> X;
};

end;